# omnicode-assistant

./: .env.example  .gitignore  README.md  demo.sh  pyproject.toml  sample_to_refactor.py
omnicode/: main.py
omnicode/commands/: base.py  generate.py  refactor.py
omnicode/core/: config.py  model_manager.py
omnicode/utils/: ast_parser.py
omnicode_assistant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
